# splitio.rs

./: .gitignore  Cargo.toml
examples/: basic.rs
src/: cache.rs  client.rs  condition.rs  errors.rs  lib.rs  main.rs  matcher.rs  split.rs  splitter.rs  storage.rs  treatment.rs
test_data/: all_keys_matcher.json  splitChanges.json  whitelist_matcher.json
