[package]
name = "splitio"
version = "0.1.0"
authors = ["aliaksandr.rahalevich <saksmlz@gmail.com>"]
edition = "2018"

[dependencies]
redis = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
failure = "0.1"
failure_derive = "0.1"
murmur3 = "0.4"
lazy_static = "1.3"
log = "0.4"

[dev-dependencies]
simple_logger = "1.0"
